--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  
-  <link rel="icon" type="image/x-icon" href="./favicon-quiz.ico">
-    <title>Quiz API</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon-quiz.ico">
+  <title>Quiz API</title>
 </head>
 
 <body>
   <div class="grid text-center" style="--bs-columns: 10; --bs-gap: 1rem;">
     <div class="g-col-6">
       <section>
-        <a href="quiz-logo.png" target="_blank"><img src="quiz-logo.png" width="100%" height="20%"
+        <a href="#" target="_blank"><img src="./assets/images/quiz-logo.png" width="100%" height="20%"
             alt="Photo of White Beach in Boracay, Philippines" /></a>
         <div class="card results">
           <div class="win-loss-container">
@@ -30,48 +30,52 @@
             <div class="countdown">
 
               <h2><samp>Seconds Remaining:</samp></h2>
-              <samp><div class="timer-text"></samp>
-                <samp><div class="large-font timer-count"></samp>
-                  <h2><samp>10</samp></h2>
-                </div>
-              </div>
-
-
+              <samp>
+                <div class="timer-text">
+              </samp>
+              <samp>
+                <div class="large-font timer-count">
+              </samp>
+              <h2><samp>10</samp></h2>
             </div>
-            <div class="g-col-4">
-              <div id="start-box">
-                <button class="btn btn-primary" id="start-button" type="button"><samp>
-                    Start Quiz</samp>
-                </button>
-              </div>
-              <div id="quiz-box" style="display: none">
-                <samp>
-                  <h1 id="question"></h1>
-                </samp>
-                <!-- four buttons in here -->
-                <div class="d-grid gap-2 col-6 mx-auto">
-                  <button class="btn btn-primary" id="a" type="button"><samp>A</samp></button>
-                  <button class="btn btn-primary" id="b" type="button"><samp>B</samp></button>
-                  <button class="btn btn-primary" id="c" type="button"><samp>C</samp></button>
-                  <button class="btn btn-primary" id="d" type="button"><samp>D</samp></button>
-                </div>
-              </div>
-
-              <script src="./js/index.js"></script>
+          </div>
 
 
-              <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-                integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-                crossorigin="anonymous"></script>
-              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-                integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-                crossorigin="anonymous"></script>
-              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-                crossorigin="anonymous"></script>
+        </div>
+        <div class="g-col-4">
+          <div id="start-box">
+            <button class="btn btn-primary" id="start-button" type="button"><samp>
+                Start Quiz</samp>
+            </button>
+          </div>
+          <div id="quiz-box" style="display: none">
+            <samp>
+              <h1 id="question"></h1>
+            </samp>
+            <!-- four buttons in here -->
+            <div class="d-grid gap-2 col-6 mx-auto">
+              <button class="btn btn-primary" id="a" type="button"><samp>A</samp></button>
+              <button class="btn btn-primary" id="b" type="button"><samp>B</samp></button>
+              <button class="btn btn-primary" id="c" type="button"><samp>C</samp></button>
+              <button class="btn btn-primary" id="d" type="button"><samp>D</samp></button>
+            </div>
+          </div>
+
+          <script src="./assets/js/index.js"></script>
+
+
+          <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+
+        </div>
+    </div>
 </body>
-</div>
-</div>
-
 
 </html>
